--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -652,7 +652,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "Informaci\u00f3n",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -943,5 +943,7 @@
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Updated": "\u00daltima modificaci\u00f3n",
-    "Sessions catalogue": "Sessions catalogue"
+    "Sessions catalogue": "Sessions catalogue",
+    "Course settings": "Configuraci\u00f3n de la lleici\u00f3n",
+    "Course maintenance": "Course maintenance"
 }
