--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -518,7 +518,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "\u60c5\u5831",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -793,5 +793,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Sessions catalogue": "Sessions catalogue"
+    "Sessions catalogue": "Sessions catalogue",
+    "Course settings": "\u30b3\u30fc\u30b9\u306e\u8a2d\u5b9a",
+    "Course maintenance": "Course maintenance"
 }
