--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -603,7 +603,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "Information",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -876,5 +876,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Sessions catalogue": "Sessions catalogue"
+    "Sessions catalogue": "Sessions catalogue",
+    "Course settings": "Inst\u00e4llningar",
+    "Course maintenance": "Course maintenance"
 }
