--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -789,7 +789,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "Informaci\u00f3n",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -1124,5 +1124,7 @@
     "Explore more courses": "Explorar m\u00e1s cursos",
     "Sessions catalogue": "Cat\u00e1logo de sesiones",
     "Root": "Ra\u00edz",
-    "Videoconference": "Videoconferencia"
+    "Videoconference": "Videoconferencia",
+    "Course settings": "Configuraci\u00f3n del curso",
+    "Course maintenance": "Mantenimiento del curso"
 }
