--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -709,7 +709,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "Informazioa",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -1027,5 +1027,7 @@
     "Updated": "Azken aldaketa",
     "Sessions catalogue": "Sessions catalogue",
     "Root": "Erroa",
-    "Videoconference": "Bideokonferentzia"
+    "Videoconference": "Bideokonferentzia",
+    "Course settings": "Ikastaroaren ezarpenak",
+    "Course maintenance": "Course maintenance"
 }
