--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -657,7 +657,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "\u0627\u0637\u0644\u0627\u0639\u0627\u062a",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -965,5 +965,7 @@
     "Updated": "\u0628\u0631\u0648\u0632 \u0631\u0633\u0627\u0646\u06cc \u0634\u062f",
     "Sessions catalogue": "Sessions catalogue",
     "Root": "\u0631\u0648\u062a",
-    "Videoconference": "\u0648\u06cc\u062f\u06cc\u0648 \u06a9\u0646\u0641\u0631\u0627\u0646\u0633"
+    "Videoconference": "\u0648\u06cc\u062f\u06cc\u0648 \u06a9\u0646\u0641\u0631\u0627\u0646\u0633",
+    "Course settings": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a \u062f\u0631\u0633",
+    "Course maintenance": "Course maintenance"
 }
