--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -772,7 +772,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "\u05de\u05d9\u05d3\u05e2",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -1103,5 +1103,7 @@
     "Explore more courses": "\u05d7\u05e7\u05d5\u05e8 \u05e7\u05d5\u05e8\u05e1\u05d9\u05dd \u05e0\u05d5\u05e1\u05e4\u05d9\u05dd",
     "Sessions catalogue": "Sessions catalogue",
     "Root": "\u05e9\u05d5\u05e8\u05e9",
-    "Videoconference": "\u05d5\u05e2\u05d9\u05d3\u05ea \u05d5\u05d9\u05d3\u05d0\u05d5"
+    "Videoconference": "\u05d5\u05e2\u05d9\u05d3\u05ea \u05d5\u05d9\u05d3\u05d0\u05d5",
+    "Course settings": "\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05e7\u05d5\u05e8\u05e1",
+    "Course maintenance": "Course maintenance"
 }
