--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -789,7 +789,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "informatie",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -1124,5 +1124,7 @@
     "Explore more courses": "Verken meer cursussen",
     "Sessions catalogue": "Catalogus van sessies",
     "Root": "Root",
-    "Videoconference": "Videoconferentie"
+    "Videoconference": "Videoconferentie",
+    "Course settings": "Cursus instellingen",
+    "Course maintenance": "Cursusonderhoud"
 }
