--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -639,7 +639,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "Informaci\u00f3n",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -916,5 +916,7 @@
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Updated": "Qepa t'jrapachisqan",
-    "Sessions catalogue": "Sessions catalogue"
+    "Sessions catalogue": "Sessions catalogue",
+    "Course settings": "Configuraci\u00f3n de la lecci\u00f3n",
+    "Course maintenance": "Course maintenance"
 }
