--- a/assets/locales/ru_RU.json
+++ b/assets/locales/ru_RU.json
@@ -589,7 +589,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "\u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044f",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -857,5 +857,6 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Sessions catalogue": "Sessions catalogue"
+    "Sessions catalogue": "Sessions catalogue",
+    "Course maintenance": "Course maintenance"
 }
