--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -503,7 +503,7 @@
     "Text submitted successfully": "Text submitted successfully",
     "Information": "Impormasyon",
     "You are adding calendar events for attendance": "You are adding calendar events for attendance",
-    "Add attendance calendar": "Add attendance calendar",
+    "Add attendance date": "Add attendance date",
     "Back to attendance sheet": "Back to attendance sheet",
     "Add calendar event": "Add calendar event",
     "Clear all": "Clear all",
@@ -776,5 +776,7 @@
     "Visual theme (assets)": "Visual theme (assets)",
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
-    "Sessions catalogue": "Sessions catalogue"
+    "Sessions catalogue": "Sessions catalogue",
+    "Course settings": "Mga setting ng kurso",
+    "Course maintenance": "Course maintenance"
 }
