--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -1475,10 +1475,10 @@ msgid "Month view"
 msgstr "Vue par mois"
 
 msgid "Weekly"
-msgstr "Vue par semaine"
+msgstr "Hebdomadaire"
 
 msgid "Daily"
-msgstr "Vue par jour"
+msgstr "Quotidien"
 
 msgid "Add event to the agenda"
 msgstr "Ajouter un événement perso"
@@ -25544,7 +25544,7 @@ msgstr ""
 "et suivez les instructions."
 
 msgid "Bi-weekly"
-msgstr "Bi-semanal"
+msgstr "Bi-hebdomadaire"
 
 msgid "Every x days"
 msgstr "Tous les x jours"
