Language add missing translation for new funcionality to track user not subscribed in course - refs BT#23019

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -30023,3 +30023,6 @@ msgstr "Geburtsdatum"
 
 msgid "Are you sure to delete the friendship?"
 msgstr "Möchten Sie die Freundschaft wirklich löschen?"
+
+msgid "Show free users (not enrolled)"
+msgstr "Freie Nutzer anzeigen (nicht eingeschrieben)"
