Language: Fix courses term in Spanish (was same as LP)

--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -2072,7 +2072,7 @@ msgid "Tests"
 msgstr "Ejercicios"
 
 msgid "Courses"
-msgstr "Lecciones"
+msgstr "Cursos"
 
 msgid "Copy course"
 msgstr "Copiar el curso"
