Language: Update Vue terms

--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -20,7 +20,7 @@
     "Sign out": "Cerrar sesi\u00f3n",
     "My sessions": "Mis sesiones",
     "Users": "Usuarios",
-    "Courses": "Lecciones",
+    "Courses": "Cursos",
     "Sessions": "Sessions",
     "Administration": "Administraci\u00f3n",
     "Remember me": "Recordarme",
